<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutDisplay"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight=".5"
            android:numColumns="16"
            tools:listitem="@layout/field_item"/>

        <Button
            android:id="@+id/buttonTank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tank" />

        <Button
            android:id="@+id/buttonMiner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Miner" />

        <Button
            android:id="@+id/buttonDropship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dropship" />

        <Switch
            android:id="@+id/eventSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Update using events" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LinearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5">

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/down" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonDown"
            android:layout_alignLeft="@+id/buttonDown"
            android:layout_alignRight="@+id/buttonDown"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/buttonDown"
            android:text="@string/left" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonDown"
            android:text="@string/right" />

        <Button
            android:id="@+id/buttonFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonUp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buttonRight"
            android:text="@string/fire" />

        <Button
            android:id="@+id/buttonMine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonFire"
            android:layout_centerHorizontal="true"
            android:text="MINE" />


        <Button
            android:id="@+id/buttonLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="Leave" />

    </RelativeLayout>

</LinearLayout>